--- a/package.json
+++ b/package.json
@@ -1,23 +1,35 @@
 {
-  "name": "couchdb-client",
-  "version": "1.0.8",
+  "author": {
+    "name": "JDB legodudejb@gmail.com"
+  },
+  "dependencies": {
+    "request": "^2.72.0"
+  },
   "description": "A simple couchdb client",
-  "main": "index.js",
-  "scripts": {
-    "test": "mocha test.js"
+  "devDependencies": {
+    "unexpected": "^10.13.2"
   },
   "keywords": [
     "couchdb",
     "client",
     "database"
   ],
-  "author": "JDB legodudejb@gmail.com",
   "license": "MIT",
-  "dependencies": {
-    "request": "^2.72.0"
+  "main": "index.js",
+  "maintainers": [
+    {
+      "email": "legodudejb@gmail.com",
+      "name": "legodude"
+    }
+  ],
+  "name": "couchdb-client",
+  "scripts": {
+    "test": "mocha test.js"
   },
-  "devDependencies": {
-    "unexpected": "^10.13.2"
-  },
-  "tonicTest": "https://tonicdev.com/npm/couchdb-client"
+  "tonicTest": "https://tonicdev.com/npm/couchdb-client",
+  "version": "1.0.10",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/legodude17/couchdb-client.git"
+  }
 }
