--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "maintainers": [
     {
       "email": "legodudejb@gmail.com",
-      "name": "legodude"
+      "name": "JDB"
     }
   ],
   "name": "couchdb-client",
